<resources>
    <string name="app_name">iCareConnect Nurse</string>
    <string name="deep_link_url" translatable="false">icareconnect.page.link</string>
    <string name="deep_link_ios_bundle" translatable="false">com.team.iCare-Nurse</string>
    <string name="google_places_api_key" translatable="false">AIzaSyBxwRzUvnbtTjNc8DURP4l4auJWsmrr7Bk</string>
    <string name="allow">ALLOW</string>
    <string name="deny">Deny</string>
    <string name="settings">Settings</string>
    <string name="media_permission">This feature needs permission to use camera and external storage.</string>
    <string name="internet">Internet</string>
    <string name="check_internet">Please check your internet connection</string>
    <string name="ok">OK</string>
    <string name="alert">Alert</string>
    <string name="login">Login</string>
    <string name="facebook">Continue with Facebook</string>
    <string name="google">Continue with Google</string>
    <string name="login_using_email">Login using Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="we_need_your_phone">We need your Phone number to identify you.</string>
    <string name="code_sent_to">Code sent to %s</string>
    <string name="resend_code">Resend code</string>
    <string name="didn_t_receive_the_code_yet">Didn’t receive the code yet?</string>
    <string name="verification">Verification</string>
    <string name="we_sent_you_a_code">We sent you a code to %s</string>
    <string name="enter_otp">Please enter otp</string>
    <string name="location">Location</string>
    <string name="chat">Chat</string>
    <string name="call">Call</string>
    <string name="feeds">Feeds</string>
    <string name="patients">Patients</string>
    <string name="experience">Experience</string>
    <string name="reviews">Reviews</string>
    <string name="about">About</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="references">References</string>
    <string name="notification">Notification</string>
    <string name="logout">Logout</string>
    <string name="terms_and_conditions">Terms of service</string>
    <string name="contact_us">Contact Us</string>
    <string name="emergency_contact_info">Emergency Contact Information</string>
    <string name="invite_people">Invite People</string>
    <string name="version">Version %s</string>
    <string name="you_are_running_the_latest_version">You are running the latest version</string>
    <string name="appointments">Appointments</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="login_care_connect">Login to iCareConnect</string>
    <string name="sign_up_care_connect">Sign Up to iCareConnect</string>
    <string name="login_with">Login with</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="password">Password</string>
    <string name="re_enter_password">Re-Enter Password</string>
    <string name="bio">Personal Profile</string>
    <string name="bio_des">Tell us about yourself! Include experience, hobbies and what sets you apart</string>
    <string name="edit">Edit</string>
    <string name="photo_des">Please upload a clear photo of yourself</string>
    <string name="rate_des">Set your preferred rate based on your experience</string>
    <string name="set_rate">Set Rate</string>
    <string name="age">Age:</string>
    <string name="phone_number">Phone Number</string>
    <string name="dob">DOB</string>
    <string name="we_need_your_email_password">We need your Email &amp; Password to identify you.</string>
    <string name="didn_t_have_an_account">Didn’t have an account?</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="wallet">Wallet</string>
    <string name="revenue">Revenue</string>
    <string name="all_Requests">All Requests</string>
    <string name="calls">Calls</string>
    <string name="available_balance">Available Balance</string>
    <string name="pay_out">Pay-out</string>
    <string name="enter_name">Please enter name</string>
    <string name="enter_last_name">Please enter last name</string>
    <string name="select_dob">Please select DOB</string>
    <string name="enter_email">Please enter email</string>
    <string name="enter_correct_email">Please enter correct email</string>
    <string name="enter_password">Password length must be atleast 5 characters</string>
    <string name="enter_bio">Please enter Personal Profile</string>
    <string name="enter_job">Please enter Job Type</string>
    <string name="enter_company">Please enter Company Name</string>
    <string name="enter_contact_pernson">Please enter Contact Person Name</string>
    <string name="sign_out">Sign out</string>
    <string name="logout_dialog_message">Are you sure you want to sign out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_data_found">No data found</string>
    <string name="total_chat">Total chat</string>
    <string name="total_calls">Total calls</string>
    <string name="s_completed">%s  Completed</string>
    <string name="unsuccessful">%s Unsuccessful</string>
    <string name="select_image">Select image</string>
    <string name="select_document">Select document</string>
    <string name="update">Update</string>
    <string name="update_desc">You have new update for iCareConnect Nurse!</string>
    <string name="we_need_your_email">We need your registered email to reach you</string>
    <string name="sent_password">We have sent a temporary password in your email. Please check your email.</string>
    <string name="chat_request">Chat request</string>
    <string name="call_equest">Call request</string>
    <string name="new_request">New Request</string>
    <string name="no_show">No show</string>
    <string name="canceled">Cancelled</string>
    <string name="canceled_service">Cancelled Service</string>
    <string name="cancel">Cancel</string>
    <string name="start_request">Start request</string>
    <string name="track_status">Track Status</string>
    <string name="start_request_message">Are you sure you want to proceed request</string>
    <string name="add_money">Add Money</string>
    <string name="added_to_wallet">Added to wallet</string>
    <string name="failed_transaction">Transaction failed</string>
    <string name="closing_balance">Closing Balance: %s</string>
    <string name="accept_request">Accept request</string>
    <string name="accept_request_message">Are you sure you want to accept this request</string>
    <string name="accepted">Accepted</string>
    <string name="inprogess">In progress</string>
    <string name="starting_call">Starting a call...</string>
    <string name="starting_chat">Starting a chat</string>
    <string name="money_received_from">Received from\n%s</string>
    <string name="speciality">Speciality</string>
    <string name="years_of_experience">Years of experience</string>
    <string name="consultation_fee_for_call">Consultation fee for Call</string>
    <string name="consultation_fee_for_chat">Consultation fee for Chat</string>
    <string name="na">NA</string>
    <string name="typing">typing</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="active_now">Active now</string>
    <string name="offline">Offline</string>
    <string name="enter_message">Enter message</string>
    <string name="type_your_message_here">Type your message…</string>
    <string name="photo">Photo</string>
    <string name="chat_first_message">Hi %s\nI am Available for chat lets discuss the problem</string>
    <string name="end_chat">End Chat</string>
    <string name="end_chat_desc">This will end chat. You ll no longer be able to chat</string>
    <string name="bank_account">Here is the bank account</string>
    <string name="account_number">Account Number</string>
    <string name="account_name">Name on Account</string>
    <string name="bank_name">Bank Name</string>
    <string name="ifsc_code">Institution Number</string>
    <string name="transit_number">Transit Number</string>
    <string name="select_currency">Select currency</string>
    <string name="add_bank">Add Bank</string>
    <string name="edit_bank">Edit Bank</string>
    <string name="card_ending_with">%s Card ending with %s</string>
    <string name="years">years</string>
    <string name="total_revenue_made">Total Revenue made</string>
    <string name="request_completed">Request completed</string>
    <string name="add_feed">Add feed</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="turn_speaker_on">Speaker ON</string>
    <string name="callee">client identity or phone number</string>
    <string name="answer">Answer</string>
    <string name="decline">Decline</string>
    <string name="room_status">status</string>
    <string name="permissions_needed">Camera and Microphone permissions needed. Please allow in App Settings for additional functionality.</string>
    <string name="twilio_sdk_starter_server_url">YOUR_TWILIO_SDK_STARTER_SERVER_URL</string>
    <string name="registered">Registered</string>
    <string name="turn_speaker_off">Speaker OFF</string>
    <string name="codec_title">Set your preferred audio and video codec. Not all codecs are supported with Group rooms. The media server will fallback to OPUS or VP8 if a preferred codec is not supported.</string>
    <string name="pref_title_audio_codec">Audio Codec</string>
    <string name="pref_title_video_codec">Video Codec</string>
    <string name="sender_bandwidth_constraints">Set sender bandwidth constraints. Zero represents the WebRTC default value which varies by codec.</string>
    <string name="max_audio_bitrate">Max Audio Bitrate (bits per second)</string>
    <string name="max_video_bitrate">Max Video Bitrate (bits per second)</string>
    <string name="vp8_simulcast">VP8 Simulcast</string>
    <string name="classes">Classes</string>
    <string name="add_new">Add new</string>
    <string name="add_class">Add class</string>
    <string name="select_date">Select date</string>
    <string name="select_time">Select time</string>
    <string name="price_of_class">Price of class</string>
    <string name="class_name">Class Name</string>
    <string name="class_time">Class Time</string>
    <string name="class_price">Class Price</string>
    <string name="start_class">Start Class</string>
    <string name="select_category">Select Category</string>
    <string name="category">Category</string>
    <string name="start_class_message">By starting CLASS you ll make this class available for all who occupied. Want to start class?</string>
    <string name="full_name">First Name</string>
    <string name="contact_person">Contact Person</string>
    <string name="contact_number">Contact Number</string>
    <string name="company_email">Company Email address</string>
    <string name="end_date">End Date?</string>
    <string name="job_name">Enter Job Name</string>
    <string name="next">Next</string>
    <string name="profile">Profile</string>
    <string name="please_upload_photos">Please upload photo of all required documents</string>
    <string name="manage_documents">Manage Documents</string>
    <string name="start_date">Start Date?</string>
    <string name="change_password">Change Password</string>
    <string name="account_details">Account Details</string>
    <string name="my_earnings">My Statistics</string>
    <string name="started">Started</string>
    <string name="completed">Completed</string>
    <string name="change_service_status">Change Service Status</string>
    <string name="pending">Pending</string>
    <string name="update_status">Update Status</string>
    <string name="clear">Clear</string>
</resources>