<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.consultantvendor.ui.dashboard.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_wallet"
        android:name="com.consultantvendor.ui.dashboard.wallet.WalletFragment"
        android:label="@string/wallet"
        tools:layout="@layout/fragment_wallet" />

    <fragment
        android:id="@+id/navigation_revenue"
        android:name="com.consultantvendor.ui.dashboard.revenue.RevenueFragment"
        android:label="@string/revenue"
        tools:layout="@layout/fragment_revenue" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.consultantvendor.ui.dashboard.settings.SettingsFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />

</navigation>