<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="@dimen/dp_4"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="@dimen/dp_8"
    app:cardElevation="@dimen/dp_4"
    app:cardPreventCornerOverlap="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dp_10">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/drawable_stroke_grey"
        android:padding="@dimen/dp_4">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:fontFamily="@font/campton_medium"
            android:hint="@string/full_name"
            android:imeOptions="actionNext"
            android:inputType="textCapWords"
            android:maxLength="100"
            android:maxLines="1"
            android:padding="@dimen/dp_8"
            android:textAllCaps="true"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/sp_16" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@drawable/drawable_stroke_grey"
        android:padding="@dimen/dp_4">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etContactPerson"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:fontFamily="@font/campton_medium"
            android:hint="@string/contact_person"
            android:imeOptions="actionNext"
            android:inputType="textCapWords"
            android:maxLength="100"
            android:maxLines="1"
            android:padding="@dimen/dp_8"
            android:textAllCaps="true"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/sp_16" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@drawable/drawable_stroke_grey"
        android:padding="@dimen/dp_4">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etContactNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:fontFamily="@font/campton_medium"
            android:hint="@string/contact_number"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLength="100"
            android:maxLines="1"
            android:padding="@dimen/dp_8"
            android:textAllCaps="true"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/sp_16" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@drawable/drawable_stroke_grey"
        android:padding="@dimen/dp_4">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etCCompanyEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:fontFamily="@font/campton_medium"
            android:hint="@string/company_email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:maxLength="100"
            android:maxLines="1"
            android:padding="@dimen/dp_8"
            android:textAllCaps="true"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/sp_16" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@drawable/drawable_stroke_grey"
        android:padding="@dimen/dp_4">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etJobType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:fontFamily="@font/campton_medium"
            android:hint="@string/job_name"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLength="100"
            android:maxLines="1"
            android:padding="@dimen/dp_8"
            android:textAllCaps="true"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/sp_16" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@drawable/drawable_stroke_grey"
        android:padding="@dimen/dp_4">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etStartDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:clickable="false"
            android:focusable="false"
            android:fontFamily="@font/campton_medium"
            android:hint="@string/start_date"
            android:imeOptions="actionNext"
            android:inputType="textCapWords"
            android:maxLength="100"
            android:maxLines="1"
            android:padding="@dimen/dp_8"
            android:textAllCaps="true"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/sp_16" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@drawable/drawable_stroke_grey"
        android:padding="@dimen/dp_4">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etEndDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:clickable="false"
            android:focusable="false"
            android:fontFamily="@font/campton_medium"
            android:hint="@string/end_date"
            android:imeOptions="actionNext"
            android:inputType="textCapWords"
            android:maxLength="100"
            android:maxLines="1"
            android:padding="@dimen/dp_8"
            android:textAllCaps="true"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/sp_16" />
    </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>