<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_back_white" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:fontFamily="@font/campton_semibold"
            android:gravity="center"
            android:text="@string/history"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/sp_18"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitleDesc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/campton_medium"
            android:gravity="center"
            android:visibility="gone"
            android:layout_margin="@dimen/dp_24"
            android:text="@string/please_upload_photos"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/sp_18"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />


        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipeRefresh"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/tvNext"
            app:layout_constraintTop_toBottomOf="@+id/tvTitleDesc">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvListing"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvNext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_20"
            android:background="@drawable/drawable_theme_40"
            android:fontFamily="@font/campton_semibold"
            android:gravity="center"
            android:text="@string/next"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/sp_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvNoData"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="@string/no_data_found"
            android:textColor="@color/textColor_50"
            android:textSize="@dimen/sp_14"
            android:visibility="gone"
            app:fontFamily="@font/campton_medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

        <include
            android:id="@+id/clLoader"
            layout="@layout/item_loader"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

